--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "globals": "^15.14.0",
+        "html-react-parser": "^5.2.3",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
         "next-themes": "^0.4.6",
@@ -54,6 +55,7 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.55.0",
         "react-simple-wysiwyg": "^3.2.2",
+        "react-spinners": "^0.16.1",
         "react-toastify": "^11.0.5",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.1",
