--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.55.0",
+        "react-icons": "^5.5.0",
+        "react-player": "^2.16.0",
+        "react-scroll-parallax": "^3.4.5",
         "react-simple-wysiwyg": "^3.2.2",
         "react-spinners": "^0.16.1",
         "react-toastify": "^11.0.5",
