--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/aos": "^3.0.7",
         "@types/node": "^22.13.5",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -43,9 +44,11 @@
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
+        "aos": "^3.0.0-beta.6",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "framer-motion": "^12.7.5",
         "globals": "^15.14.0",
         "html-react-parser": "^5.2.3",
         "laravel-vite-plugin": "^1.0",
@@ -55,6 +58,7 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.55.0",
         "react-icons": "^5.5.0",
+        "react-intersection-observer": "^9.16.0",
         "react-player": "^2.16.0",
         "react-scroll-parallax": "^3.4.5",
         "react-simple-wysiwyg": "^3.2.2",
