--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "react-spinners": "^0.16.1",
         "react-toastify": "^11.0.5",
         "sonner": "^2.0.3",
+        "swiper": "^11.2.6",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
